--- a/src/app/table-basic-example.html
+++ b/src/app/table-basic-example.html
@@ -1,58 +1,65 @@
-<mat-card>
-  <mat-card-header class="card_header">
-    <form action="">
-      <mat-form-field class="color_transparent">
-        <mat-icon matPrefix fontIcon="search" class="color-green"></mat-icon>
-        <mat-label>Filter</mat-label>
-        <input type="text" matInput>
-        <mat-icon matSuffix fontIcon="close"></mat-icon>
-      </mat-form-field>
-    </form>
-  </mat-card-header>
-  <mat-card-content>
-    <table mat-table [dataSource]="dataSource" class="">
+<div class="container">
+  <mat-card class="container">
+    <mat-card-header class="card_header w-full">
+      <form action="">
+        <mat-form-field class="color_transparent">
+          <mat-icon matPrefix fontIcon="search" class="color-accent"></mat-icon>
+          <mat-label>Filter</mat-label>
+          <input type="text" matInput>
+          <mat-icon matSuffix fontIcon="close" class="color-accent"></mat-icon>
+        </mat-form-field>
+      </form>
+    </mat-card-header>
+    <mat-card-content class="w-full">
+      <table mat-table [dataSource]="dataSource" class="">
+  
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+      
+        <!-- Position Column -->
+        <ng-container matColumnDef="league">
+          <th mat-header-cell *matHeaderCellDef> League </th>
+          <td mat-cell *matCellDef="let element"> {{element.league}} </td>
+        </ng-container>
+      
+        <!-- Name Column -->
+        <ng-container matColumnDef="player">
+          <th mat-header-cell *matHeaderCellDef> Player </th>
+          <td mat-cell *matCellDef="let element"> {{element.player}} </td>
+        </ng-container>
+      
+        <!-- Weight Column -->
+        <ng-container matColumnDef="payment_date">
+          <th mat-header-cell *matHeaderCellDef> Payment Date </th>
+          <td mat-cell *matCellDef="let element"> {{element.payment_date}} </td>
+        </ng-container>
+      
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="paid">
+          <th mat-header-cell *matHeaderCellDef> Paid </th>
+          <td mat-cell *matCellDef="let element"> {{element.paid}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="comp">
+          <th mat-header-cell *matHeaderCellDef> Comp </th>
+          <td mat-cell *matCellDef="let element"> {{element.comp}} </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      
+    </mat-card-content>
+    <mat-card-footer class="w-full">
+      <mat-paginator 
+                [pageSizeOptions]="[5, 10, 15, 20]"
+                aria-label="Select page">
+      </mat-paginator>
+  
+    </mat-card-footer>
+  </mat-card>
+</div>
 
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-    
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-      </ng-container>
-    
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-    
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-      </ng-container>
-    
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-      </ng-container>
-    
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    
-  </mat-card-content>
-  <mat-card-footer>
-    <mat-paginator [length]="100"
-              [pageSize]="10"
-              [pageSizeOptions]="[5, 10, 25, 100]"
-              aria-label="Select page">
-    </mat-paginator>
-
-  </mat-card-footer>
-</mat-card>
 
 
 
